# Painting-Analyzer

./: .gitignore  CMakeLists.txt  ClickLabel.cpp  ClickLabel.hpp  README.md  grayscale.cpp  grayscale.hpp  main.cpp  mainwindow.cpp  mainwindow.ui  perspective.cpp  perspective.hpp  testPerspective.cpp
